# LLMind

./: .gitignore  LICENSE  README.md  index.html  llmind-converter.jsx  package.json  railway.json  vite.config.js
.github/workflows/: release-homebrew.yml  release-pypi.yml
LLMind/LLMind/: ContentView.swift  LLMindApp.swift
LLMind/LLMind.xcodeproj/: project.pbxproj
LLMind/LLMindTests/: LLMindTests.swift
LLMind/LLMindUITests/: LLMindUITests.swift  LLMindUITestsLaunchTests.swift
docs/superpowers/plans/: 2026-04-09-llmind-cli.md  2026-04-13-llmind-mac.md  2026-04-17-gemini-provider.md  2026-04-18-audio-enrichment.md
docs/superpowers/specs/: 2026-04-09-llmind-cli-design.md  2026-04-13-llmind-mac-design.md  2026-04-17-gemini-vision-provider-design.md  2026-04-18-audio-enrichment-design.md
llmind-app/: pyproject.toml
llmind-app/app/: main.py
llmind-app/app/routers/: directories.py  files.py  search.py
llmind-app/app/services/: search_service.py
llmind-app/llmind_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
llmind-app/tests/: test_api.py  test_search_service.py
llmind-cli/: .env.example  .gitignore  README.md  pyproject.toml
llmind-cli/.llmind-keys/: 7b61ea63be828c88.key  e9424eed21bdefb4.key
llmind-cli/llmind/: anthropic_client.py  audio.py  audio_injector.py  cli.py  crypto.py  embedder.py  enricher.py  gemini_client.py  injector.py  models.py  ollama.py  openai_client.py  reader.py  safety.py  verifier.py  vision.py  watcher.py  xmp.py
llmind-cli/llmind_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llmind-cli/tests/: conftest.py  test_anthropic_client.py  test_audio_dispatch.py  test_audio_enricher.py  test_audio_injector_dispatch.py  test_audio_injector_m4a.py  test_audio_injector_mp3.py  test_audio_injector_wav.py  test_audio_models.py  test_audio_signing.py  test_audio_xmp.py  test_cli.py  test_crypto.py  test_enricher.py  test_gemini_client.py  test_gemini_embedder.py  test_injector.py  test_keyword_search.py  test_models.py  test_ollama.py  test_openai_client.py  test_reader.py  test_safety.py  test_verifier.py  test_vision.py  test_watcher.py  test_xmp.py
llmind-cli/tests/fixtures/audio/: generate_fixtures.py  silent.m4a
llmind-mac/LLMind/LLMind.xcodeproj/: project.pbxproj
llmind-mac/LLMind/LLMindTests/: LLMindTests.swift
llmind-mac/LLMind/LLMindUITests/: LLMindUITests.swift  LLMindUITestsLaunchTests.swift
packaging/homebrew/: README.md  llmind-cli.rb  regenerate_resources.sh
src/: main.jsx
(+21 files in other folders)
