[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmind-cli"
version = "0.1.0"
requires-python = ">=3.11"
description = "Embed signed semantic-metadata layers into images, PDFs, and audio files"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dmitry Rollins" }]
urls = { Homepage = "https://github.com/dmitryrollins/LLMind", Source = "https://github.com/dmitryrollins/LLMind", Issues = "https://github.com/dmitryrollins/LLMind/issues" }
dependencies = [
    "click>=8.0",
    "pillow>=10.0",
    "pikepdf>=8.0",
    "pdf2image>=1.16",
    "mutagen>=1.47",
    "watchdog>=3.0",
    "requests>=2.31",
    "rich>=13.0",
]

[project.scripts]
llmind = "llmind.cli:main"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
gemini = ["google-genai>=1.0.0"]
embeddings = ["voyageai>=0.2.0"]
whisper-local = ["faster-whisper>=1.0"]
all = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "voyageai>=0.2.0",
    "faster-whisper>=1.0",
]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "responses>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
